@@ -5,6 +5,8 @@ import org.group.koipondbackend.entity.Order;
 import org.group.koipondbackend.mapper.OrderMapper;
 import org.group.koipondbackend.repository.OrderRepository;
 import org.springframework.stereotype.Service;
+import java.util.Optional;
+
 
 import lombok.AllArgsConstructor;
 
@@ -12,16 +14,31 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 public class OrderService {
 
     private final OrderRepository orderRepository;
     private final OrderMapper orderMapper;
 
-    public List<OrderDTO> getOrdersByProjectId(Long projectId) {
-        List<Order> orders = orderRepository.findByProjectId(projectId);
-        return orders.stream()
-                .map(orderMapper::toDto)
-                .collect(Collectors.toList());
+    public OrderService(OrderRepository orderRepository, OrderMapper orderMapper) {
+        this.orderRepository = orderRepository;
+        this.orderMapper = orderMapper;
+    }
+
+    public List<OrderDTO> getAllOrders() {
+        return orderRepository.findAll().stream().map(orderMapper::toDto).toList();
+    }
+
+    public Optional<OrderDTO> getOrderById(Long id) {
+        return orderRepository.findById(id).map(orderMapper::toDto);
+    }
+
+    public OrderDTO createOrder(OrderDTO orderDTO) {
+        Order order = orderMapper.toEntity(orderDTO);
+        Order savedOrder = orderRepository.save(order);
+        return orderMapper.toDto(savedOrder);
+    }
+
+    public void deleteOrder(Long id) {
+        orderRepository.deleteById(id);
     }
 }
